crates/model/tests/compile_fail/rg_events_no_declaration.stderr
error: resource group with `events` requires `declaration: <alias>` to mark which event carries the resource group identity
  --> tests/compile_fail/rg_events_no_declaration.rs:5:1
   |
 5 | / quent_model::entity! {
 6 | |     Bad: ResourceGroup {
 7 | |         events: {
 8 | |             a: MyEvent,
...  |
11 | | }
   | |_^
   |
   = note: this error originates in the macro `quent_model::entity` (in Nightly builds, run with -Z macro-backtrace for more info)
